--- a/views/pages/index.pug
+++ b/views/pages/index.pug
@@ -735,6 +735,151 @@ block view
                 img.img-responsive(src='assets/images/client-4.jpg', alt='client-img')
   // CLIENT SECTION END
   // CONTACT SECTION START
+
+    section#portfolio.section-wrapper.gray-background.pb60
+    .container
+      .row
+        .col-lg-12.heding-wrapper.text-center.scale-less.animate-in
+          span Clientes
+          h2 NUESTROS CLIENTES
+          span.spliter
+    .portfolio-wrapper
+      .portfolio-list.grid
+        .item.web
+          .view.view-fourth
+            figure.imghvr-shutter-out-vert
+              img.img-responsive(alt='portfolio-img', src='assets/images/ABB.png')
+              figcaption.mask
+                .table
+                  .table-row
+                    .table-cell.text-center.align-middle
+                      .subtitle  
+                      .title ABB
+        .item.web
+          .view.view-fourth
+            figure.imghvr-shutter-out-vert
+              img.img-responsive(alt='portfolio-img', src='assets/images/ALLEN_BRADLEY.png')
+              figcaption.mask
+                .table
+                  .table-row
+                    .table-cell.text-center.align-middle
+                      .subtitle 
+                      .title ALLEN BRADLEY
+        .item.photos
+          .view.view-fourth
+            figure.imghvr-shutter-out-vert
+              img.img-responsive(alt='portfolio-img', src='assets/images/SIEMENS.png')
+              figcaption.mask
+                .table
+                  .table-row
+                    .table-cell.text-center.align-middle
+                      .subtitle 
+                      .title SIEMENS
+        .item.print
+          .view.view-fourth
+            figure.imghvr-shutter-out-vert
+              img.img-responsive(alt='portfolio-img', src='assets/images/RITTAL.png')
+              figcaption.mask
+                .table
+                  .table-row
+                    .table-cell.text-center.align-middle
+                      .title RITTAL
+                      .description 
+                      
+        .item.web
+          .view.view-fourth
+            figure.imghvr-shutter-out-vert
+              img.img-responsive(alt='portfolio-img', src='assets/images/ROCKWELL.png')
+              figcaption.mask
+                .table
+                  .table-row
+                    .table-cell.text-center.align-middle
+                      .subtitle 
+                      .title ROCKWELL
+        .item.web
+          .view.view-fourth
+            figure.imghvr-shutter-out-vert
+              img.img-responsive(alt='portfolio-img', src='assets/images/schneider.png')
+              figcaption.mask
+                .table
+                  .table-row
+                    .table-cell.text-center.align-middle
+                      .subtitle 
+                      .title SCHNEIDER
+
+    .clearfix
+  section#portfolio.section-wrapper.gray-background.pb60
+    .container
+      .row
+        .col-lg-12.heding-wrapper.text-center.scale-less.animate-in
+          span Marcas
+          h2 SOLUCIONES EN MARCAS
+          span.spliter
+    .portfolio-wrapper
+      .portfolio-list.grid
+        .item.web
+          .view.view-fourth
+            figure.imghvr-shutter-out-vert
+              img.img-responsive(alt='portfolio-img', src='assets/images/ABB.png')
+              figcaption.mask
+                .table
+                  .table-row
+                    .table-cell.text-center.align-middle
+                      .subtitle  
+                      .title ABB
+        .item.web
+          .view.view-fourth
+            figure.imghvr-shutter-out-vert
+              img.img-responsive(alt='portfolio-img', src='assets/images/ALLEN_BRADLEY.png')
+              figcaption.mask
+                .table
+                  .table-row
+                    .table-cell.text-center.align-middle
+                      .subtitle 
+                      .title ALLEN BRADLEY
+        .item.photos
+          .view.view-fourth
+            figure.imghvr-shutter-out-vert
+              img.img-responsive(alt='portfolio-img', src='assets/images/SIEMENS.png')
+              figcaption.mask
+                .table
+                  .table-row
+                    .table-cell.text-center.align-middle
+                      .subtitle 
+                      .title SIEMENS
+        .item.print
+          .view.view-fourth
+            figure.imghvr-shutter-out-vert
+              img.img-responsive(alt='portfolio-img', src='assets/images/RITTAL.png')
+              figcaption.mask
+                .table
+                  .table-row
+                    .table-cell.text-center.align-middle
+                      .title RITTAL
+                      .description 
+                      
+        .item.web
+          .view.view-fourth
+            figure.imghvr-shutter-out-vert
+              img.img-responsive(alt='portfolio-img', src='assets/images/ROCKWELL.png')
+              figcaption.mask
+                .table
+                  .table-row
+                    .table-cell.text-center.align-middle
+                      .subtitle 
+                      .title ROCKWELL
+        .item.web
+          .view.view-fourth
+            figure.imghvr-shutter-out-vert
+              img.img-responsive(alt='portfolio-img', src='assets/images/schneider.png')
+              figcaption.mask
+                .table
+                  .table-row
+                    .table-cell.text-center.align-middle
+                      .subtitle 
+                      .title SCHNEIDER
+
+    .clearfix
   section#contact.section-wrapper.contact-background.parallax(data-stellar-background-ratio='0.1', style='background-image: url(assets/images/contact-bg.jpg);')
     .overlay
       .container
