--- a/views/pages/team.pug
+++ b/views/pages/team.pug
@@ -28,112 +28,65 @@ block view
         .item.web
           .view.view-fourth
             figure.imghvr-shutter-out-vert
-              img.img-responsive(alt='portfolio-img', src='assets/images/recent-work-1.jpg')
+              img.img-responsive(alt='portfolio-img', src='assets/images/ABB.png')
               figcaption.mask
                 .table
                   .table-row
                     .table-cell.text-center.align-middle
-                      .subtitle Lorem Ipsum
-                      .title development
-                      .description Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                      a.btn.transparent.mt20(href='portfolio-detail.html') Detailed
-                      a.lightbox(data-lightbox='recent-work-1', href='assets/images/recent-work-1.jpg')
-                        i.fa.fa-plus
+                      .subtitle  
+                      .title ABB
         .item.web
           .view.view-fourth
             figure.imghvr-shutter-out-vert
-              img.img-responsive(alt='portfolio-img', src='assets/images/recent-work-2.jpg')
+              img.img-responsive(alt='portfolio-img', src='assets/images/ALLEN_BRADLEY.png')
               figcaption.mask
                 .table
                   .table-row
                     .table-cell.text-center.align-middle
-                      .subtitle Lorem Ipsum
-                      .title development
-                      .description Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                      a.btn.transparent.mt20(href='portfolio-detail.html') Detailed
-                      a.lightbox(data-lightbox='recent-work-2', href='assets/images/recent-work-2.jpg')
-                        i.fa.fa-plus
+                      .subtitle 
+                      .title ALLEN BRADLEY
         .item.photos
           .view.view-fourth
             figure.imghvr-shutter-out-vert
-              img.img-responsive(alt='portfolio-img', src='assets/images/recent-work-3.jpg')
+              img.img-responsive(alt='portfolio-img', src='assets/images/SIEMENS.png')
               figcaption.mask
                 .table
                   .table-row
                     .table-cell.text-center.align-middle
-                      .subtitle Lorem Ipsum
-                      .title development
-                      .description Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                      a.btn.transparent.mt20(href='portfolio-detail.html') Detailed
-                      a.lightbox(data-lightbox='recent-work-3', href='assets/images/recent-work-3.jpg')
-                        i.fa.fa-plus
+                      .subtitle 
+                      .title SIEMENS
         .item.print
           .view.view-fourth
             figure.imghvr-shutter-out-vert
-              img.img-responsive(alt='portfolio-img', src='assets/images/recent-work-4.jpg')
+              img.img-responsive(alt='portfolio-img', src='assets/images/RITTAL.png')
               figcaption.mask
                 .table
                   .table-row
                     .table-cell.text-center.align-middle
-                      .title GRUPO GLORIA
+                      .title RITTAL
                       .description 
                       
         .item.web
           .view.view-fourth
             figure.imghvr-shutter-out-vert
-              img.img-responsive(alt='portfolio-img', src='assets/images/recent-work-1.jpg')
+              img.img-responsive(alt='portfolio-img', src='assets/images/ROCKWELL.png')
               figcaption.mask
                 .table
                   .table-row
                     .table-cell.text-center.align-middle
-                      .subtitle Lorem Ipsum
-                      .title development
-                      .description Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                      a.btn.transparent.mt20(href='portfolio-detail.html') Detailed
-                      a.lightbox(data-lightbox='recent-work-5', href='assets/images/recent-work-1.jpg')
-                        i.fa.fa-plus
+                      .subtitle 
+                      .title ROCKWELL
         .item.web
           .view.view-fourth
             figure.imghvr-shutter-out-vert
-              img.img-responsive(alt='portfolio-img', src='assets/images/recent-work-2.jpg')
+              img.img-responsive(alt='portfolio-img', src='assets/images/schneider.png')
               figcaption.mask
                 .table
                   .table-row
                     .table-cell.text-center.align-middle
-                      .subtitle Lorem Ipsum
-                      .title development
-                      .description Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                      a.btn.transparent.mt20(href='portfolio-detail.html') Detailed
-                      a.lightbox(data-lightbox='recent-work-6', href='assets/images/recent-work-2.jpg')
-                        i.fa.fa-plus
-        .item.photos
-          .view.view-fourth
-            figure.imghvr-shutter-out-vert
-              img.img-responsive(alt='portfolio-img', src='assets/images/recent-work-3.jpg')
-              figcaption.mask
-                .table
-                  .table-row
-                    .table-cell.text-center.align-middle
-                      .subtitle Lorem Ipsum
-                      .title development
-                      .description Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                      a.btn.transparent.mt20(href='portfolio-detail.html') Detailed
-                      a.lightbox(data-lightbox='recent-work-7', href='assets/images/recent-work-3.jpg')
-                        i.fa.fa-plus
-        .item.print
-          .view.view-fourth
-            figure.imghvr-shutter-out-vert
-              img.img-responsive(alt='portfolio-img', src='assets/images/recent-work-4.jpg')
-              figcaption.mask
-                .table
-                  .table-row
-                    .table-cell.text-center.align-middle
-                      .subtitle Lorem Ipsum
-                      .title development
-                      .description Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                      a.btn.transparent.mt20(href='portfolio-detail.html') Detailed
-                      a.lightbox(data-lightbox='recent-work-8', href='assets/images/recent-work-4.jpg')
-                        i.fa.fa-plus
+                      .subtitle 
+                      .title SCHNEIDER
+
     .clearfix
   //
   //section.page-content.section-wrapper.pt0
