--- a/views/pages/team.pug
+++ b/views/pages/team.pug
@@ -28,260 +28,165 @@ block view
         .item.web
           .view.view-fourth
             figure.imghvr-shutter-out-vert
-              img.img-responsive(alt='portfolio-img', src='assets/images/ABB.png')
+              img.img-responsive(alt='portfolio-img', src='assets/images/ABEIMA.png')
               figcaption.mask
                 .table
                   .table-row
                     .table-cell.text-center.align-middle
                       .subtitle  
-                      .title ABB
+                      .title ABEIMA
         .item.web
           .view.view-fourth
             figure.imghvr-shutter-out-vert
-              img.img-responsive(alt='portfolio-img', src='assets/images/ALLEN_BRADLEY.png')
+              img.img-responsive(alt='portfolio-img', src='assets/images/ABENGOA.png')
               figcaption.mask
                 .table
                   .table-row
                     .table-cell.text-center.align-middle
                       .subtitle 
-                      .title ALLEN BRADLEY
+                      .title ABENGOA
         .item.photos
           .view.view-fourth
             figure.imghvr-shutter-out-vert
-              img.img-responsive(alt='portfolio-img', src='assets/images/SIEMENS.png')
+              img.img-responsive(alt='portfolio-img', src='assets/images/BEFESA.png')
               figcaption.mask
                 .table
                   .table-row
                     .table-cell.text-center.align-middle
                       .subtitle 
-                      .title SIEMENS
+                      .title BEFESA
         .item.print
           .view.view-fourth
             figure.imghvr-shutter-out-vert
-              img.img-responsive(alt='portfolio-img', src='assets/images/RITTAL.png')
+              img.img-responsive(alt='portfolio-img', src='assets/images/CHIMU.png')
               figcaption.mask
                 .table
                   .table-row
                     .table-cell.text-center.align-middle
-                      .title RITTAL
+                      .title CHIMU
                       .description 
                       
         .item.web
           .view.view-fourth
             figure.imghvr-shutter-out-vert
-              img.img-responsive(alt='portfolio-img', src='assets/images/ROCKWELL.png')
+              img.img-responsive(alt='portfolio-img', src='assets/images/CPP.png')
               figcaption.mask
                 .table
                   .table-row
                     .table-cell.text-center.align-middle
                       .subtitle 
-                      .title ROCKWELL
+                      .title CPP
         .item.web
           .view.view-fourth
             figure.imghvr-shutter-out-vert
-              img.img-responsive(alt='portfolio-img', src='assets/images/schneider.png')
+              img.img-responsive(alt='portfolio-img', src='assets/images/ETERNIT.png')
               figcaption.mask
                 .table
                   .table-row
                     .table-cell.text-center.align-middle
                       .subtitle 
-                      .title SCHNEIDER
+                      .title ETERNIT
+        .item.web
+          .view.view-fourth
+            figure.imghvr-shutter-out-vert
+              img.img-responsive(alt='portfolio-img', src='assets/images/GERFOR.png')
+              figcaption.mask
+                .table
+                  .table-row
+                    .table-cell.text-center.align-middle
+                      .subtitle 
+                      .title GERFOR
+        .item.photos
+          .view.view-fourth
+            figure.imghvr-shutter-out-vert
+              img.img-responsive(alt='portfolio-img', src='assets/images/GLORIA.png')
+              figcaption.mask
+                .table
+                  .table-row
+                    .table-cell.text-center.align-middle
+                      .subtitle 
+                      .title GLORIA
+        .item.print
+          .view.view-fourth
+            figure.imghvr-shutter-out-vert
+              img.img-responsive(alt='portfolio-img', src='assets/images/GYPLAC.png')
+              figcaption.mask
+                .table
+                  .table-row
+                    .table-cell.text-center.align-middle
+                      .title GYPLAC
+                      .description 
+                      
+        .item.web
+          .view.view-fourth
+            figure.imghvr-shutter-out-vert
+              img.img-responsive(alt='portfolio-img', src='assets/images/HAYDUK.png')
+              figcaption.mask
+                .table
+                  .table-row
+                    .table-cell.text-center.align-middle
+                      .subtitle 
+                      .title HAYDUK
+        .item.web
+          .view.view-fourth
+            figure.imghvr-shutter-out-vert
+              img.img-responsive(alt='portfolio-img', src='assets/images/HUANUCO.png')
+              figcaption.mask
+                .table
+                  .table-row
+                    .table-cell.text-center.align-middle
+                      .subtitle 
+                      .title GOBIERNO REGIONAL DE HUANUCO
+        .item.web
+          .view.view-fourth
+            figure.imghvr-shutter-out-vert
+              img.img-responsive(alt='portfolio-img', src='assets/images/IBERMATICA.png')
+              figcaption.mask
+                .table
+                  .table-row
+                    .table-cell.text-center.align-middle
+                      .subtitle 
+                      .title IBERMATICA
+        .item.photos
+          .view.view-fourth
+            figure.imghvr-shutter-out-vert
+              img.img-responsive(alt='portfolio-img', src='assets/images/MYCOM.png')
+              figcaption.mask
+                .table
+                  .table-row
+                    .table-cell.text-center.align-middle
+                      .subtitle 
+                      .title MYCOM
+        .item.print
+          .view.view-fourth
+            figure.imghvr-shutter-out-vert
+              img.img-responsive(alt='portfolio-img', src='assets/images/PEPSICO.png')
+              figcaption.mask
+                .table
+                  .table-row
+                    .table-cell.text-center.align-middle
+                      .title PEPSICO
+                      .description 
+                      
+        .item.web
+          .view.view-fourth
+            figure.imghvr-shutter-out-vert
+              img.img-responsive(alt='portfolio-img', src='assets/images/SAN_LORENZO.png')
+              figcaption.mask
+                .table
+                  .table-row
+                    .table-cell.text-center.align-middle
+                      .subtitle 
+                      .title SAN LORENZO
+        .item.web
+          .view.view-fourth
+            figure.imghvr-shutter-out-vert
+              img.img-responsive(alt='portfolio-img', src='assets/images/sedapal.png')
+              figcaption.mask
+                .table
+                  .table-row
+                    .table-cell.text-center.align-middle
+                      .subtitle 
+                      .title SEDAPAL
 
     .clearfix
-  //
-  //section.page-content.section-wrapper.pt0
-    .container.page-content-wrapper
-      .row
-        .col-lg-12.heding-wrapper.text-center
-
-          h2 Nuestros Clientes
-          span.spliter
-      .row.text-center
-        .col-lg-3.col-sm-6
-          .team-holder.text-center.scale-big.animate-in.team-box
-            a(href='#')
-              img.img-responsive(src='assets/images/clientes/GLORIA.png', alt='team-img')
-            .name GRUPO GLORIA
-            .position Co-Founde
-            span.spliter
-
-        .col-lg-3.col-sm-6
-          .team-holder.text-center.scale-big.animate-in.team-box
-            a(href='#')
-              img.img-responsive(src='assets/images/clientes/ABENGOA.png', alt='team-img')
-            .name GRUPO GLORIA
-            .position Co-Founde
-            span.spliter
-         
-        .col-lg-3.col-sm-6
-          .team-holder.text-center.scale-big.animate-in.team-box
-            a(href='#')
-              img.img-responsive(src='assets/images/clientes/BEFESA.png', alt='team-img')
-            .name GRUPO GLORIA
-            .position Co-Founde
-            span.spliter
-         
-        .col-lg-3.col-sm-6
-          .team-holder.text-center.scale-big.animate-in.team-box
-            a(href='#')
-              img.img-responsive(src='assets/images/clientes/GOBIERNO_HUANUCO.jpg', alt='team-img')
-            .name Edgar Rice Burroughs
-            .position Graphic Designer
-            span.spliter
-        .col-lg-3.col-sm-6
-          .team-holder.text-center.scale-big.animate-in.team-box
-            a(href='#')
-              img.img-responsive(src='assets/images/clientes/ABEIMA.PNG', alt='team-img')
-            .name Edgar Rice Burroughs
-            .position Graphic Designer
-            span.spliter
-        .col-lg-3.col-sm-6
-          .team-holder.text-center.scale-big.animate-in.team-box
-            a(href='#')
-              img.img-responsive(src='assets/images/clientes/NESTLE.PNG', alt='team-img')
-            .name Edgar Rice Burroughs
-            .position Graphic Designer
-            span.spliter
-        .col-lg-3.col-sm-6
-          .team-holder.text-center.scale-big.animate-in.team-box
-            a(href='#')
-              img.img-responsive(src='assets/images/clientes/SEDAPAL.PNG', alt='team-img')
-            .name Edgar Rice Burroughs
-            .position Graphic Designer
-            span.spliter
-        .col-lg-3.col-sm-6
-          .team-holder.text-center.scale-big.animate-in.team-box
-            a(href='#')
-              img.img-responsive(src='assets/images/clientes/SEDA_LORETO.PNG', alt='team-img')
-            .name Edgar Rice Burroughs
-            .position Graphic Designer
-            span.spliter
-        .col-lg-3.col-sm-6
-          .team-holder.text-center.scale-big.animate-in.team-box
-            a(href='#')
-              img.img-responsive(src='assets/images/clientes/SEDA_HUANUCO.PNG', alt='team-img')
-            .name Edgar Rice Burroughs
-            .position Graphic Designer
-            span.spliter
-
-        .col-lg-3.col-sm-6
-          .team-holder.text-center.scale-big.animate-in.team-box
-            a(href='#')
-              img.img-responsive(src='assets/images/clientes/SAN_LORENZO.PNG', alt='team-img')
-            .name Edgar Rice Burroughs
-            .position Graphic Designer
-            span.spliter
-        .col-lg-3.col-sm-6
-          .team-holder.text-center.scale-big.animate-in.team-box
-            a(href='#')
-              img.img-responsive(src='assets/images/clientes/QROMA.PNG', alt='team-img')
-            .name Edgar Rice Burroughs
-            .position Graphic Designer
-            span.spliter
-        .col-lg-3.col-sm-6
-          .team-holder.text-center.scale-big.animate-in.team-box
-            a(href='#')
-              img.img-responsive(src='assets/images/clientes/PEPSICO.PNG', alt='team-img')
-            .name Edgar Rice Burroughs
-            .position Graphic Designer
-            span.spliter
-        .col-lg-3.col-sm-6
-          .team-holder.text-center.scale-big.animate-in.team-box
-            a(href='#')
-              img.img-responsive(src='assets/images/clientes/MYCOM.PNG', alt='team-img')
-            .name Edgar Rice Burroughs
-            .position Graphic Designer
-            span.spliter
-        .col-lg-3.col-sm-6
-          .team-holder.text-center.scale-big.animate-in.team-box
-            a(href='#')
-              img.img-responsive(src='assets/images/clientes/IBERMATICA.PNG', alt='team-img')
-            .name Edgar Rice Burroughs
-            .position Graphic Designer
-            span.spliter
-        .col-lg-3.col-sm-6
-          .team-holder.text-center.scale-big.animate-in.team-box
-            a(href='#')
-              img.img-responsive(src='assets/images/clientes/HAYDUK.PNG', alt='team-img')
-            .name Edgar Rice Burroughs
-            .position Graphic Designer
-            span.spliter
-        .col-lg-3.col-sm-6
-          .team-holder.text-center.scale-big.animate-in.team-box
-            a(href='#')
-              img.img-responsive(src='assets/images/clientes/GYPLAC.PNG', alt='team-img')
-            .name Edgar Rice Burroughs
-            .position Graphic Designer
-            span.spliter
-        .col-lg-3.col-sm-6
-          .team-holder.text-center.scale-big.animate-in.team-box
-            a(href='#')
-              img.img-responsive(src='assets/images/clientes/GERFOR.PNG', alt='team-img')
-            .name Edgar Rice Burroughs
-            .position Graphic Designer
-            span.spliter
-        .col-lg-3.col-sm-6
-          .team-holder.text-center.scale-big.animate-in.team-box
-            a(href='#')
-              img.img-responsive(src='assets/images/clientes/ETERNIT.PNG', alt='team-img')
-            .name Edgar Rice Burroughs
-            .position Graphic Designer
-            span.spliter
-        .col-lg-3.col-sm-6
-          .team-holder.text-center.scale-big.animate-in.team-box
-            a(href='#')
-              img.img-responsive(src='assets/images/clientes/CPP.PNG', alt='team-img')
-            .name Edgar Rice Burroughs
-            .position Graphic Designer
-            span.spliter
-            
-        .col-lg-3.col-sm-6
-          .team-holder.text-center.scale-big.animate-in.team-box
-            a(href='#')
-              img.img-responsive(src='assets/images/clientes/CHIMU.PNG', alt='team-img')
-            .name Edgar Rice Burroughs
-            .position Graphic Designer
-            span.spliter
-          
-        
-  // TEAM SECTION END
-  // TEAM SECTION START
-  // TEAM SECTION END
-  // TESTIMONIALS SECTION START
-  //section
-    .testimonial-wrapper.parallax(data-stellar-background-ratio='0.1', style='background-image: url(assets/images/testimonial-bg.jpg);')
-      .overlay
-        .container
-          .row
-            .testimonial-slider.owl-carousel.owl-theme.col-md-8.col-sm-12
-              .item
-                .avatar
-                  .author
-                    img(src='assets/images/testimonial-1.jpg', alt='avatar', width='70', height='70')
-                .testimonial-content
-                  .name JACK LONDON
-                  .job Graphic Designer
-                  span.spliter
-                  div
-                    | "Let her go, Granser," Hoo-Hoo encouraged; for the old man was already maundering about the  dis respect for elders and the reversion to cruelty of all humans that fell from high culture  to primitive conditions.
-              .item
-                .avatar
-                  .author
-                    img(src='assets/images/testimonial-1.jpg', alt='avatar', width='70', height='70')
-                .testimonial-content
-                  .name JACK LONDON
-                  .job Graphic Designer
-                  span.spliter
-                  div
-                    | "Let her go, Granser," Hoo-Hoo encouraged; for the old man was already maundering about the  dis respect for elders and the reversion to cruelty of all humans that fell from high culture  to primitive conditions.
-              .item
-                .avatar
-                  .author
-                    img(src='assets/images/testimonial-1.jpg', alt='avatar', width='70', height='70')
-                .testimonial-content
-                  .name JACK LONDON
-                  .job Graphic Designer
-                  span.spliter
-                  div
-                    | "Let her go, Granser," Hoo-Hoo encouraged; for the old man was already maundering about the  dis respect for elders and the reversion to cruelty of all humans that fell from high culture  to primitive conditions.
-  // TESTIMONIALS SECTION END
