pdf de calidad y portafolio 3 proyectos

--- a/views/partials/header.pug
+++ b/views/partials/header.pug
@@ -80,13 +80,15 @@ section.top-bar
           .sub
             ul
               li
-                a(href='portfolio') Tingo maria
+                a(href='proyectocp04') CONCURSO PUBLICO N° 004-2016-GRH/GR-1
               li
-                a(href='portfolio-detail') otro
+                a(href='proyectocp08') CONCURSO PUBLICO N° 008-2016-GRH/GR-1
+              li
+                a(href='proyectocp03') CONCURSO PUBLICO N° 003-2016-GRH/GR-1
        
         li
           a.btn-7(href='contact')
-            span CONTACT
+            span CONTACTO
     button#close-button.close-button Close Menu
   .menu-shadow
 // MOBILE MENU END
@@ -133,13 +135,15 @@ header
               .sub
                 ul
                   li
-                    a(href='portfolio-detail') PROYECTO TINGO MARIA
+                    a(href='proyectocp04') CONCURSO PUBLICO N° 004-2016-GRH/GR-1
                   li
-                    a(href='portfolio-detail') PROYECTO SANEAMIENTO X
+                    a(href='proyectocp08') CONCURSO PUBLICO N° 008-2016-GRH/GR-1
+                  li
+                    a(href='proyectocp03') CONCURSO PUBLICO N° 003-2016-GRH/GR-1
               
            
 
             li.wrap
               a.btn-7(href='contact')
-                span CONTACT
+                span CONTACTO
         .clearfix
