--- a/views/pages/about.pug
+++ b/views/pages/about.pug
@@ -39,9 +39,7 @@ block view
             h1 NUESTROS OBJETIVOS
             p
               | Consolidamos como la mejor empresa en Sistemas de Electricidad Industrial y Telecomunicaciones alcanzando en el corto tiempo nuestros planes estrategicos en el mercado. Brindando altos niveles de exelencia y satistaccion en valor agregado de nuestro producto y servicios que brindamos a nuestros clientes, estableciendo como base una relacion de confianza y transparencia.
-            a.pretty.btn.default.mt20.with-arrow-btn(href='http://vimeo.com/7874398')
-              span XL VIDEO TOUR
-              i.fa.fa-play
+          
   p
     |  <br/>
     |  <br/>
@@ -52,9 +50,7 @@ block view
           h1 MISION
           p
             | Brindar un servicio de calidad y exelencia, empleando la creatividad e innovacion tecnologica, teniendo como objetivo la mejora continua de nuestros procesos, el crcecimiento empresarial sostenible y el desarrollo profesional de sus colaboradores con la finalidad de lohgrar la completa satisfaccion de nuestros clientes por encima de sus espectativas.
-          a.pretty.btn.default.mt20.with-arrow-btn(href='http://vimeo.com/7874398')
-            span XL VIDEO TOUR
-            i.fa.fa-play
+
           
       .col-sm-6
         .page-slider
@@ -75,9 +71,7 @@ block view
           h1 VISION
           p
             | Ser una empresa lider en el segmento de negocios el cual desarrollamos y sr reconocidos por nuestra exigencia y compromiso con la calidad, seguridad, salud y medio ambiente.
-          a.pretty.btn.default.mt20.with-arrow-btn(href='http://vimeo.com/7874398')
-            span XL VIDEO TOUR
-            i.fa.fa-play
+
   p
     |  <br/>
   // PAGE CONTENT END
@@ -85,12 +79,18 @@ block view
   section#about.section-wrapper.gray-background
     .container
       .row
-        .col-lg-12.heding-wrapper.text-center.scale-less.animate-in
+        .col-lg-4.heding-wrapper.text-center.scale-less.animate-in
           span Los mejores precios,
           h2 SOMOS INTEGRADORES DE LA MARCA:
           span.spliter
-      .row
-        .col-lg-12.heding-wrapper.text-center.scale-less.animate-in
           img(src='assets/images/schneider.png', alt='VISION')
-       
+
+        .col-lg-8.heding-wrapper.text-center.scale-less.animate-in
+          h3 Politica de calidad, seguridad, salud y medio ambiente:
+          iframe(src='assets/manual.pdf', frameborder='0', width='655', height='550', marginheight='0', marginwidth='0', id='pdf')
+
+        
+        
+  
+
   // ABOUT SECTION END
