--- a/views/pages/proyecto03.pug
+++ b/views/pages/proyecto03.pug
@@ -17,8 +17,9 @@ block view
     .container.page-content-wrapper
       .row
         .col-sm-10.col-sm-push-1
+          
           .detail-page-feature
-
+            img(src='assets/images/proyecto/proyecto03.jpg', alt='services-detail-img')
           p
             | INSTALACIÓN HIDRÁULICA Y ELECTROMECÁNICA EN LOS RESERVORIOS RP-1, RP-2, RP-3, RP-4 Y RP-5.
 
