--- a/views/pages/proyecto04.pug
+++ b/views/pages/proyecto04.pug
@@ -19,7 +19,7 @@ block view
       .row
         .col-sm-10.col-sm-push-1
           .detail-page-feature
-
+          img(src='assets/images/proyecto/proyecto04.jpg', alt='services-detail-img')
           p
             | GESTIÓN, ELABORACIÓN DE EXPEDIENTE TÉCNICO Y SUMINISTRO E INSTALACIÓN DE LOS SISTEMAS DE UTILIZACIÓN EN MEDIA TENSIÓN Y TENSIÓN DE DISTRIBUCIÓN SECUNDARIA PARA LOS SUMINISTROS ELÉCTRICOS DE LA ESTACIÓN DE BOMBEO EB-1, EB-2, EB-3 Y RESERVORIOS RP-2, 2 RP-3, RP-4 Y RP-5 LOS MISMOS QUE ESTÁN ORIENTADOS A LA ATENCIÓN DE LAS NECESIDADES PARA LA OBRA DEL PROYECTO.
 
