--- a/views/pages/team.pug
+++ b/views/pages/team.pug
@@ -28,42 +28,42 @@ block view
         .item.web
           .view.view-fourth
             figure.imghvr-shutter-out-vert
-              img.img-responsive(alt='portfolio-img', src='assets/images/ABEIMA.png')
+              img.img-responsive(alt='portfolio-img', src='assets/images/nestle.jpg')
               figcaption.mask
                 .table
                   .table-row
                     .table-cell.text-center.align-middle
                       .subtitle  
-                      .title ABEIMA
+                      .title NESTLE
         .item.web
           .view.view-fourth
             figure.imghvr-shutter-out-vert
-              img.img-responsive(alt='portfolio-img', src='assets/images/ABENGOA.png')
+              img.img-responsive(alt='portfolio-img', src='assets/images/opplim.png')
               figcaption.mask
                 .table
                   .table-row
                     .table-cell.text-center.align-middle
                       .subtitle 
-                      .title ABENGOA
+                      .title OPPFILM
         .item.photos
           .view.view-fourth
             figure.imghvr-shutter-out-vert
-              img.img-responsive(alt='portfolio-img', src='assets/images/BEFESA.png')
+              img.img-responsive(alt='portfolio-img', src='assets/images/protisa.jpeg')
               figcaption.mask
                 .table
                   .table-row
                     .table-cell.text-center.align-middle
                       .subtitle 
-                      .title BEFESA
+                      .title protisa
         .item.print
           .view.view-fourth
             figure.imghvr-shutter-out-vert
-              img.img-responsive(alt='portfolio-img', src='assets/images/CHIMU.png')
+              img.img-responsive(alt='portfolio-img', src='assets/images/lnlh.png')
               figcaption.mask
                 .table
                   .table-row
                     .table-cell.text-center.align-middle
-                      .title CHIMU
+                      .title CHOCOLATES DEL PERU
                       .description 
                       
         .item.web
