--- a/views/partials/header.pug
+++ b/views/partials/header.pug
@@ -85,7 +85,9 @@ section.top-bar
                 a(href='proyectocp08') CONCURSO PUBLICO N° 008-2016-GRH/GR-1
               li
                 a(href='proyectocp03') CONCURSO PUBLICO N° 003-2016-GRH/GR-1
-       
+        li
+          a.btn-7(href='galeria')
+            span GALERIA
         li
           a.btn-7(href='contact')
             span CONTACTO
@@ -96,12 +98,12 @@ section.top-bar
 header
   .container
     .row
-      .col-lg-3.col-md-3.col-sm-9.col-xs-9
+      .col-lg-2.col-md-2.col-sm-10.col-xs-10
         .c-table.logo-container
           figure.c-row
             a.c-cell(href='index')
               img(src='assets/images/logo-red.png', alt='logo-img')
-      .col-lg-9.col-md-9.col-sm-3.col-xs-3
+      .col-lg-10.col-md-10.col-sm-2.col-xs-2
         .cd-primary-nav-trigger
           span.cd-menu-icon
         nav.main-nav
@@ -128,7 +130,7 @@ header
                     a(href='solutions-teleco') TELECOMUNICACIONES
                     a(href='solutions-sanea') SANEAMIENTO
             li.wrap
-              a.btn-7(href='portfolio')
+              a.btn-7(href='#')
                 span
                   | PORTAFOLIO 
                   i.fa.fa-caret-down(aria-hidden='true')
@@ -141,7 +143,9 @@ header
                   li
                     a(href='proyectocp03') CONCURSO PUBLICO N° 003-2016-GRH/GR-1
               
-           
+            li.wrap
+              a.btn-7(href='galeria')
+                span GALERIA
 
             li.wrap
               a.btn-7(href='contact')
