--- a/views/pages/lista.pug
+++ b/views/pages/lista.pug
@@ -11,7 +11,7 @@ block view
             section
                 a#main-content
                 .titlenoticia(style='display:none;')
-                    h2.page-header Formulario de inscripción
+                    h2.page-header Formulario de contacto
                 .region.region-content
                     section#block-system-main.block.block-system.clearfix
                         table.table.table-responsive-sm.table-striped
